2008-01-22  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c:
    * src/ccm-screen.h: 
    * src/ccm-screen-plugin.c:
    * src/ccm-screen-plugin.h: (ccm_screen_plugin_paint) Add cow cairo context 
                               in parameters
    * src/Makefile.am:
    * src/ccm-keybind.c:
    * src/ccm-keybind.h:
    * src/eggaccelerators.c:
    * src/eggaccelerators.h: First implementation of key bind need to be tested.
    

2008-01-22  Carlos Diógenes  <cerdiogenes@gmail.com>

    * src/ccm-screen.c:
    * src/ccm-screen.h: (_ccm_screen_get_plugin) Parse all screen plugins to 
                        get corresponding plugin type.

2008-01-18  Carlos Diógenes  <cerdiogenes@gmail.com>

    * configure.ac: Fix use custom CFLAGS if defined

2008-01-15  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/shadow/ccm-shadow.c: Fix a crash if surface of ccm_window can't 
                                   be created.
    * src/ccm-region.c: add one pixel when scaling region, fix glitches on
                        menu-animation.

2008-01-13  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: Bump version to 0.1.4

============ Version 0.1.3.1
2008-01-13  Carlos Diógenes  <cerdiogenes@gmail.com>

    * configure.ac: Fix AM_CONDITIONAL when no glitz lib found, bump version 
                    to 0.1.3.1

============ Version 0.1.3
2008-01-13  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac:
    * plugins/fade/Makefile.am:
    * plugins/freeze/Makefile.am:
    * plugins/menu-animation/Makefile.am:
    * plugins/opacity/Makefile.am:
    * plugins/shadow/Makefile.am:
    * src/Makefile.am: Remove stupid compilation optimisation use configure to
                       fix gcc options
    * NEWS: update to new release 0.1.3
    
2008-01-13  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * data/cairo-compmgr.desktop.in.in: Disable startup notification
    