@@ -214,7 +214,7 @@ is_keycode (const gchar *string)
 gboolean
 egg_accelerator_parse_virtual (const gchar            *accelerator,
                                guint                  *accelerator_key,
-			       guint                  *keycode,
+                               guint                  *keycode,
                                EggVirtualModifierType *accelerator_mods)
 {
   guint keyval;
