@@ -1,3 +1,9 @@
+2008-01-23  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * src/ccm-screen.c:
+    * src/eggaccelerators.c: Fix typo and cleanup
+    * src/ccm-keybind.c: Compress key press and release event
+
 2008-01-22  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-screen.c:
